<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="200sp"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200sp"
        android:text="@string/back_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/toWorkout"
        android:layout_width="0sp"
        android:layout_height="80sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/start_workout_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/customize"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/red"
        android:text="@string/customize_button_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/toWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="140sp"
        android:layout_height="272sp"
        android:layout_marginTop="-50sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pfp"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/pfp_content_description" />

    <Button
        android:id="@+id/toProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/red"
        android:text="@string/view_profile_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/home_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"

            android:text="@string/home_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/planner_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"
            android:text="@string/planner_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glossary_button"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/glossary_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"
            android:text="@string/glossary_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>