<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".Track">

    <Button
        android:id="@+id/done_button"
        android:layout_width="0sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red"
        android:text="@string/done_button_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/track_header_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEntry"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="26sp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/weight_text"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/setsEntry"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/sets_text"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEntry"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/repsEntry"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/reps_text"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setsEntry"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/home_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"

            android:text="@string/home_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/planner_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"
            android:text="@string/planner_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glossary_button"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/glossary_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_red"
            android:text="@string/glossary_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>